website/websites/u64q/code/regexdna.1.scala.log

Sat, 19 Jun 2010 02:48:46 GMT

MAKE:
mv regexdna.scala regexdna.scala
mv: `regexdna.scala' and `regexdna.scala' are the same file
make: [regexdna.scala_run] Error 1 (ignored)
/usr/local/src/scala-2.8.0.RC6/bin/scalac regexdna.scala
regexdna.scala:67: error: not found: type char
      val block = new Array[char](blockSize)
                            ^
one error found
make: [regexdna.scala_run] Error 1 (ignored)
3.84s to complete and log all make actions

COMMAND LINE:
env JAVA_OPTS=-Xmx1024m /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar regexdna 0 < regexdna-input50000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: regexdna
Caused by: java.lang.ClassNotFoundException: regexdna
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: regexdna.  Program will exit.
